--- a/app/css/medium.css
+++ b/app/css/medium.css
@@ -14,15 +14,18 @@
     font-size: 18px;
 }
 
-.subsection-view .header-content {
+.subsection-view .header-content, .apps-view .header-content,
+.topics-view .header-content {
     height: 220px;
 }
 
-.subsection-view .header-content .search {
+.subsection-view .header-content .search, .apps-view .header-content .search,
+.topics-view .header-content .search {
     padding: 10px;
 }
 
-.subsection-view .header-content .search input {
+.subsection-view .header-content .search input, .apps-view .header-content .search input,
+.topics-view .header-content .search input {
     width: 300px;
     height: 52px;
     border-radius: 10px 0px 0px 10px;
@@ -30,7 +33,8 @@
     padding-left: 10px;
 }
 
-.subsection-view .header-content .search button {
+.subsection-view .header-content .search button, .apps-view .header-content .search button,
+.topics-view .header-content .search button {
     background-size: 80px 56px;
     width: 75px;
     height: 56px;
@@ -39,7 +43,8 @@
     margin-left: -10px;
 }
 
-.subsection-view .main-content .blocks {
+.subsection-view .main-content .blocks, .apps-view .main-content .blocks,
+.topics-view .main-content .blocks {
     width: 160px;
     height: 160px;
     margin: 15px;
@@ -48,6 +53,7 @@
     font-size: 16px;
 }
 
-.subsection-view .main-content .blocks label {
+.subsection-view .main-content .blocks label, .apps-view .main-content .blocks label
+.topics-view .main-content .blocks label {
     padding-top: 130px;
 }
