--- a/app/css/medium.css
+++ b/app/css/medium.css
@@ -57,3 +57,70 @@
 .topics-view .main-content .blocks label {
     padding-top: 130px;
 }
+
+.subsection-view .main-content .blocks {
+    width: 200px;
+    height: 200px;
+    margin: 20px;
+    padding: 5px;
+    background-size: 100px 100px;
+    font-size: 20px;
+}
+
+.subsection-view .main-content .blocks label {
+    padding-top: 170px;
+}
+
+.topics-view .main-content .blocks {
+    width: 160px;
+    height: 160px;
+    padding: 0px;
+    margin: 20px 20px 50px 20px;
+    background-size: 160px 160px;
+    font-size: 18px;
+}
+
+.topics-view .main-content .blocks label {
+    padding-top: 170px;
+}
+
+.apps-view .main-content .blocks {
+    width: 160px;
+    height: 160px;
+    padding: 0px;
+    margin: 20px 20px 50px 20px;
+    background-size: 160px 160px;
+    font-size: 18px;
+}
+
+.apps-view .main-content .blocks label {
+    padding-top: 170px;
+}
+
+.topics-view .main-content .subjects-container {
+    width: 65%;
+    margin: 0 6% 0 6%;
+}
+
+.side-menu
+{
+    width: 20%;
+}
+
+.topics-block .topics-block-img
+{
+    background-size: 50px 50px;
+    width: 50px;
+    height: 50px;
+    padding: 20px;
+}
+
+.topics-block-text {
+    height: 50px;
+    width: 100px;
+}
+
+.topics-block .topics-block-text a {
+    font-size: 18px;
+    padding-top: 40px;
+}
