--- a/app/css/style.css
+++ b/app/css/style.css
@@ -79,7 +79,7 @@
     margin-left: -10px;
 }
 
-.main-content .subjects-container {
+.home-view .main-content .subjects-container {
     width: 900px;
     margin: auto;
     display: block;
