--- a/app/css/very-large.css
+++ b/app/css/very-large.css
@@ -42,8 +42,12 @@
     margin-left: -10px;
 }
 
-.subsection-view .main-content .blocks, .apps-view .main-content .blocks,
-.topics-view .main-content .blocks {
+.topics-view .main-content .subjects-container {
+    width: 65%;
+    margin: 0 10% 0 10%;
+}
+
+.subsection-view .main-content .blocks {
     width: 250px;
     height: 250px;
     margin: 20px;
@@ -52,7 +56,55 @@
     font-size: 25px;
 }
 
-.subsection-view .main-content .blocks label, .apps-view .main-content .blocks label,
-.topics-view .main-content .blocks label {
+.subsection-view .main-content .blocks label {
     padding-top: 205px;
+}
+
+.topics-view .main-content .blocks {
+    width: 250px;
+    height: 250px;
+    padding: 0px;
+    margin: 20px 20px 50px 20px;
+    background-size: 250px 250px;
+    font-size: 20px;
+}
+
+.topics-view .main-content .blocks label {
+    padding-top: 260px;
+}
+
+.apps-view .main-content .blocks {
+    width: 250px;
+    height: 250px;
+    padding: 0px;
+    margin: 20px 20px 50px 20px;
+    background-size: 250px 250px;
+    font-size: 20px;
+}
+
+.apps-view .main-content .blocks label {
+    padding-top: 260px;
+}
+
+.side-menu
+{
+    width: 14%;
+}
+
+.topics-block .topics-block-img
+{
+    background-size: 60px 60px;
+    width: 60px;
+    height: 60px;
+    padding: 20px;
+}
+
+.topics-block-text {
+    height: 60px;
+    width: 100px;
+}
+
+.topics-block .topics-block-text a {
+    font-size: 19px;
+    padding-top: 40px;
 }
