--- a/app/partials/home-view.html
+++ b/app/partials/home-view.html
@@ -5,7 +5,7 @@
         </div>
         <div class="search">
             <input type="text" ng-model="keyword" placeholder="Search app with subject, topic" />
-            <a href="#/search/{{keyword}}"><button id="search-icon"></button></a>
+            <a href="#/search/{{keyword}}"><button></button></a>
         </div>
     </div>
 
