Implemented search triggered by pressing enter

--- a/app/partials/contents-view.html
+++ b/app/partials/contents-view.html
@@ -6,7 +6,7 @@
           <span class="otherAppText">Other apps</span>
         </a>
         <div class="search">
-            <input type="text" ng-model="keyword" placeholder="Search app with subject, topic" />
+            <input type="text" ng-model="keyword" onkeypress="detectEnterKey(event)" placeholder="Search app with subject, topic" />
             <a href="#/search/{{keyword}}"><button id="search-icon"></button></a>
         </div>
           <a href="#/grades">
