--- a/app/partials/home-view.html
+++ b/app/partials/home-view.html
@@ -5,7 +5,7 @@
         </div>
         <div class="search">
             <input type="text" ng-model="keyword" onkeypress="detectEnterKey(event)" placeholder="Search app with subject, topic" />
-            <a href="#/search/{{keyword}}" id="search-button"><button></button></a>
+            <a href="#/search/{{keyword}}"><button id="search-icon"></button></a>
         </div>
 
         <a id="link" href="#/otherApps" class="otherApps">
