--- a/app/partials/search-results-view.html
+++ b/app/partials/search-results-view.html
@@ -19,48 +19,15 @@
               <span class="container-name">Applications </span>
             </div>
             <div class="apps-list">
-            <!-- <div class="app-details" ng-repeat="app in apps">
-                <img src="images/otherapps/{{app.id}}.png"/>
+             <div class="app-details" ng-repeat="app in apps | filter:keyword">
+                <!-- <img src="images/otherapps/{{app.id}}.png"/> -->
                 <div class="app-name">
                   {{app.name}}
                 </div>
-            </div> -->
+            </div> 
           </div>
           </div>
           
         </div>
         
 </div>
-
-<!-- <div class="apps-view view">
-    <div class="header-content">
-        <div class="logo-header">
-            <a href="#/subjects">
-                <img src="images/logo.png" alt="logo">
-            </a>
-        </div>
-        <div class="search">
-            <input type="text" ng-model="keyword" placeholder="Search app with subject, topic" />
-            <a href="#/search/{{keyword}}"><button></button></a>
-        </div>
-        <div class="OtherApps">
-          <a id="link" href="#/otherApps" class="otherApps">
-            <img class="otherAppImage" src="images/otherapps.png" alt="otherApps"/>
-            <span class="otherAppText">Other apps</span>
-          </a>
-        </div>
-    </div>
-    <div class="clearfix"></div>
-    <div class="main-content">
-        <div class="subjects-container">
-            <div class="clearfix"></div>
-            <div ng-repeat="app in apps | filter : {type:'apps'}">
-                <a ng-click="invokeCommand(app.exec)">
-                    <div class="blocks" style="background-image:url('images/{{app.subject}}/{{app.id}}.png')">
-                        <label style="color: #000000">{{app.name}}</label>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
-</div> -->
