--- a/app/css/other-apps.css
+++ b/app/css/other-apps.css
@@ -66,6 +66,9 @@
     margin :2px 30px;
     padding-top: 20px;
 }
+.app-details a {
+    text-decoration: none;
+}
 .app-details img {
     background-color: #939598;
     display: inline-block;
