--- a/app/css/very-large.css
+++ b/app/css/very-large.css
@@ -9,7 +9,9 @@
     border-radius: 40px;
     margin: 0px 20px 5px 20px;
 }
-
+.subjects-view .header-content .search {
+  margin-left:633px;
+}
 .header-icon .icon-text {
     font-size: 20px;
 }
